Type-safe reaction anchors